--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Shrikant Ghuge",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2"
