--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2"
   },
   "devDependencies": {
