--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13"
   },
   "devDependencies": {
