--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
     "express": "^4.18.2",
+    "ngx-quill": "^25.1.3",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
