--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^17.0.0",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^6.0.0",
     "ngx-quill": "^25.1.3",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
