--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "install-server": "cd server && npm install",
         "start-server": "cd server && node index.js",
         "install-client": "cd client && npm install",
-        "build-client": "cd client && npm build",
+        "build-client": "cd client && ng build --prod",
         "start-client": "cd client && ng serve"
     },
     "keywords": [
