--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
         "start-server": "cd server && node index.js",
         "install-client": "cd client && npm install",
         "build-client": "cd client && ng build --prod",
-        "start-client": "cd client && ng serve"
+        "start-client": "cd client && ng serve --open",
+        "start": "concurrently \"npm run start-server\" \"npm run start-client\""
     },
     "keywords": [
         "blog"
     ],
     "author": "Shrikant Ghuge",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "@angular/cli": "^17.0.0",
+        "concurrently": "^8.2.2"
+    }
 }
