--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "install-server": "cd server && npm install",
         "start-server": "cd server && node index.js",
         "install-client": "cd client && npm install",
-        "build-client": "cd client && ng build --prod",
+        "build-client": "cd client && ng build --configuration=production",
         "start-client": "cd client && ng serve --open",
         "start": "concurrently \"npm run start-server\" \"npm run start-client\""
     },
