--- a/client/angular.json
+++ b/client/angular.json
@@ -30,11 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              {
-                "input": "node_modules/quill/dist/quill.bubble.css",
-                "inject": false
-              }
+              "src/styles.scss"
             ],
             "scripts": []
           },
